# myCobot

./: .gitignore  README.md  ROS2_SetupGuide.md
src/mycobot_driver/: package.xml  setup.py
src/mycobot_driver/config/: driver_params.yaml
src/mycobot_driver/mycobot_driver/: mycobot_driver_node.py
src/mycobot_driver/scripts/: mycobot_tcp_bridge.py
src/mycobot_hardware/: CMakeLists.txt  mycobot_hardware_plugin.xml  package.xml
src/mycobot_hardware/config/: hardware_params.yaml
src/mycobot_hardware/include/mycobot_hardware/: mycobot_hardware_interface.hpp
src/mycobot_hardware/src/: mycobot_hardware_interface.cpp
src/mycobot_motion/: CMakeLists.txt  package.xml
src/mycobot_motion/config/: motion_params.yaml
src/mycobot_motion/include/mycobot_motion/: motion_manager.hpp
src/mycobot_motion/launch/: motion_server.launch.py
src/mycobot_motion/src/: motion_demo_node.cpp  motion_manager.cpp  motion_server_node.cpp
src/mycobot_ros2/mycobot_bringup/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_bringup/launch/: real.launch.py  sim.launch.py
src/mycobot_ros2/mycobot_description/launch/: robot_state_publisher.launch.py
src/mycobot_ros2/mycobot_description/urdf/control/: mycobot_280_ros2_control.urdf.xacro
src/mycobot_ros2/mycobot_description/urdf/robots/: mycobot_280.urdf.xacro
src/mycobot_ros2/mycobot_gazebo/launch/: mycobot.gazebo.launch.py
src/mycobot_ros2/mycobot_interfaces/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_interfaces/action/: MoveToJoints.action  MoveToNamed.action  MoveToPose.action
src/mycobot_ros2/mycobot_moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py
src/mycobot_ros2/mycobot_moveit_config/rviz/: mycobot_280.rviz
