<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mycobot_motion</name>
  <version>0.1.0</version>
  <description>
    C++ motion control library and action server for the myCobot 280.
    Wraps MoveIt2 MoveGroupInterface and exposes MoveToPose, MoveToJoints,
    and MoveToNamed actions for use by any ROS 2 client (Python VLA nodes,
    CLI, task planners, etc.).
  </description>
  <maintainer email="gianluca.caregnato@gmail.com">Gianluca Caregnato</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>mycobot_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
